sqared covers fix

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1174,11 +1174,18 @@ h1 {
         margin-top: 31px;
         .list-box{
             position: relative;
-            margin-bottom: 16px;
-            min-height: 174px;
+            margin-bottom:20px;
+            overflow: hidden;
+            &:after{
+                content:"";
+                display: block;
+                padding-bottom:102%
+            }
             img{
-                width: 100%;
-                height: 174px;
+                width: calc(100% - 30px);
+                position:absolute;
+                top:0px;
+                left:15px;
             }
             h1{
                 position: absolute;
